# gpt2

./: .dockerignore  Dockerfile  README.md  main.py  pl_main.py  pyproject.toml
archive/: train_gpt.py
gpt2/: __init__.py  config.py  data.py  generate.py  model.py  train.py
pl_src/: config.py  datamodule.py  model.py
src/: dataset.py  model.py  train_gpt.py  trainer.py
