[project]
name = "gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
